--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,19 +21,18 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  firebase_core: ^1.0.3
+  #firebase_core: ^1.0.3
   firebase_database: ^6.1.2
   flutter:
     sdk: flutter
-    cupertino_icons: ^1.0.2
-    firebase_auth: ^1.2.0
-    firebase_core: ^1.2.0
-    font_awesome_flutter: ^9.0.0
-    google_sign_in: ^5.0.3
+  firebase_auth: ^1.2.0
+  firebase_core: ^1.2.0
+  font_awesome_flutter: ^9.0.0
+  google_sign_in: ^5.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -50,9 +49,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/main-img.png
+    - assets/images/sign-in.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
