--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ flutter:
   assets:
     - assets/images/main-img.png
     - assets/images/sign-in.png
-
+    - assets/images/mentalHealth.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
