--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,13 +22,13 @@ environment:
 
 dependencies:
   #firebase_core: ^1.0.3
-  firebase_database: ^6.1.2
+  firebase_database: ^7.1.0
   flutter:
     sdk: flutter
-  firebase_auth: ^1.2.0
-  firebase_core: ^1.2.0
+  firebase_auth: ^1.3.0
+  firebase_core: ^1.2.1
   font_awesome_flutter: ^9.0.0
-  google_sign_in: ^5.0.3
+  google_sign_in: ^5.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -51,8 +51,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/sign-in.png
-    - assets/images/sign-up.png
     - assets/images/mentalHealth.png
+    - assets/images/sign.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
